Fix header width on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -324,7 +324,7 @@ nav {
 }
 
 .wideNavItem {
-    margin: 0px 20px;
+    margin: 0px 15px;
     display: flex;
     align-items: center;
     font-size: 1.3em;
